# Brain-Storm

./: .env.example  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_626-629.md  PR_DESCRIPTION.md  PR_DESCRIPTION_REPOSITORY_PATTERN.md  PR_DESC_COMPLETE.md  PR_DESC_INFRASTRUCTURE.md  PR_DESC_USERS_REPO.md  README.md  clippy.toml  docker-compose.logging.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  package-lock.json  package.json  release-notes.md  sonar-project.properties  stryker.mutation.config.js  task1.md
.cargo/: audit.toml
.github/: dependabot.yml
contracts/: Dockerfile
docs/: ANALYTICS.md  ASSET_SUPPORT.md  COMPLIANCE.md  DATABASE_MIGRATIONS.md  SECURITY_TESTING.md  accessibility-testing-guide.md  api-documentation-automation.md  api-gateway.md  automated-accessibility-testing.md  backup-restore.md  backup-verification.md  code-organization-guide.md  code-organization-migration-guide.md  compliance-checking.md  contract-integration-testing.md  contract-interfaces.md  cost-optimization-implementation.md  data-privacy-gdpr.md  database-migrations-cicd.md  database-schema.md  dependency-injection-best-practices.md  dependency-injection-guide.md  deployment-guide.md  developer-onboarding.md  disaster-recovery.md  docker-guide.md  environment-provisioning.md  error-handling.md  i18n-guide.md  infrastructure-validation.md  load-testing-automation.md  migrations.md  monitoring.md  pact-testing.md  performance-optimization-caching.md  (+17 more)
(+562 files in other folders)
