[workspace]
members = [
    "stellar-contract",
    "packages/contracts/contracts/market",
]

[workspace.dependencies]
# Soroban SDK - latest stable
soroban-sdk = "20.0.0"
soroban-cli = "20.0.0"

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
debug = false
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
